--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.9.3",
